fix list overflow

--- a/src/modules/home/styles/home.scss
+++ b/src/modules/home/styles/home.scss
@@ -5,7 +5,7 @@
 }
 
 .pagination {
-  @apply flex flex-row justify-center bg-accent text-white;
+  @apply flex flex-row justify-center bg-accent text-white text-xs;
 
   & li {
     @apply flex py-1 m-2;
@@ -15,7 +15,7 @@
     }
 
     & a {
-      @apply flex flex-1 text-center w-10 h-10 rounded-full items-center justify-center border;
+      @apply flex flex-1 text-center w-8 h-8 rounded-full items-center justify-center border;
       border-color: transparent;
 
       &:hover {
